--- a/index.html
+++ b/index.html
@@ -161,6 +161,9 @@
             opacity: 0;
             pointer-events: none;
         }
+        .atualimagem {
+            border-radius: 10px;
+        }
     </style>
     <script>
         function toggleSection(id) {
@@ -221,16 +224,30 @@
     </div>
     <img class="logo" src="pre-sets/SegLHZLtbg.png">
     <div class="txtprc">
-        <p class="txtprincipal"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi finibus sed mauris egestas aliquet. Fusce euismod, sem ut laoreet tempus, ligula eros ornare elit, nec mollis arcu neque at nisl. Proin cursus mi velit, et dapibus metus faucibus nec. Fusce interdum enim lectus, nec tempor felis convallis in. Nulla facilisis urna a pretium pellentesque. Duis lobortis euismod lacus sed suscipit. Morbi pulvinar sit amet tortor vel feugiat. <br> Aliquam pharetra, diam in congue interdum, ex tortor iaculis diam, a vulputate dui lacus vel orci. Curabitur ornare sagittis magna, eget rhoncus nisl luctus ac. Sed vulputate vitae mi et vulputate. Cras eget velit et purus mattis vulputate. Etiam ultricies sapien risus. Integer ut venenatis orci, non dictum tellus. Sed lobortis volutpat neque, nec lobortis libero tincidunt sit amet. Etiam auctor ornare justo commodo vehicula. Nullam sed finibus nunc. Pellentesque quis suscipit dui. Ut pharetra, quam ut feugiat bibendum, ex massa hendrerit arcu, laoreet ultricies diam nisi ut lacus. Nunc malesuada urna ac venenatis malesuada. Praesent ultrices ipsum ut felis iaculis sodales. Donec metus risus, convallis sed pretium fermentum, semper eget dui. Fusce blandit accumsan dui in commodo. Etiam dignissim volutpat nisi, vel feugiat ante blandit eu. <br> In varius mauris molestie fringilla pellentesque. Curabitur leo dolor, dignissim vitae mauris a, volutpat condimentum orci. In vel faucibus purus. Aliquam mauris erat, efficitur gravida pulvinar vestibulum, imperdiet eget erat. Aenean sed dapibus tortor. Integer finibus sollicitudin velit, ut rutrum massa efficitur at. Ut sit amet sem feugiat, volutpat lacus quis, faucibus velit. Mauris cursus lorem non lacus pulvinar, in fermentum urna semper. Proin accumsan aliquet laoreet. Etiam ultrices interdum urna ac vehicula. Donec commodo magna lacinia, egestas libero in, convallis lorem. Nullam imperdiet quam lacinia velit cursus, vel suscipit lacus lobortis. Nam laoreet ante eu volutpat pretium. Curabitur rutrum neque id malesuada ultrices. <br>Nam fermentum volutpat iaculis. Sed magna elit, gravida sit amet nunc in, semper porttitor tortor. Cras et interdum orci. Vivamus vestibulum, augue sed pellentesque vulputate, tortor purus cursus nunc, id blandit odio nisi at quam. Vivamus mauris tortor, eleifend vitae est non, lacinia vulputate est. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec metus mauris, finibus ac mi sed, sollicitudin vestibulum nulla. Maecenas vel lorem vel magna suscipit egestas. Ut vitae enim a purus malesuada aliquam. Mauris felis neque, condimentum in tortor in, posuere porta erat. Sed interdum, velit ac sodales posuere, tellus eros consequat libero, ut aliquam orci urna vel neque. Vestibulum quis bibendum neque. In congue tincidunt facilisis. Aliquam non purus quis nisl posuere ornare ut vel ex. Suspendisse rhoncus sed ante sed hendrerit. <br> Cras auctor finibus ex vel fermentum. Etiam cursus tincidunt mauris quis aliquet. Fusce non massa sit amet lacus placerat efficitur non id ligula. Morbi leo libero, vulputate eget efficitur in, mollis sit amet nisi. Vivamus quis sem a sem tristique sodales sit amet sit amet ante. Aliquam accumsan justo vitae purus commodo iaculis. In tempus mauris ac risus fringilla, ut sodales purus faucibus. Donec eleifend odio vel massa sodales, efficitur sodales quam venenatis. Nam rutrum pellentesque massa commodo tempor. Curabitur sapien nisi, faucibus id consequat quis, dictum eu nunc. Sed iaculis, justo a suscipit pretium, tortor purus pellentesque tortor, non varius quam turpis eget purus. Nunc est ante, egestas a iaculis vitae, dignissim ut urna. </p>
+        <p class="txtprincipal"> Bem vindo ao possível site do segundão do CSF. Este site está sendo promovido por meio da campanha de Eri e Giulia durante as eleições de líder e vice-líder da sala. O objetivo do site é trazer maior facilidade para momentos de estudo e para guardar certas recordaçoes do nosso incrível ano letivo. O site traz consigo uma lista de todos os trabalhos (independente do intinerário), os assuntos das próximas provas, e até messmo o texto de atualidades da semana (Caso você não queira baixar no site oficial do colégio.), uma página de notícias onde poderemos registrar moemntos importantes para nós durante o ano e uma página falando sobre cada aluno para aqueles de fora da sala poderem nos conhecerem melhor.<br> <span style="background-color: chocolate !important; color: black;">ADENDO, esse site está sendo produzido para a campanha eletiva, consequentemente só irá se manter caso Eri ganhe a votação junto a Giulia. Consequentemente as informações estão desatualizadas, sendo da semana 23-29 de março. caso o projeto vá para frente esse texto irá ser alterado para informações sobre a sala.</span></p>
     </div>
     <a class="rodapé" href="https://www.instagram.com/segundaoocsf?igsh=OGQ5YTJwMzZwODlt"> instagram * </a> 
     <div id="trabalhos" class="info-section">
         <button class="close-btn" onclick="closeSection('trabalhos')">X</button>
         <h2>Trabalhos Pendentes</h2>
         <div class="trblpendente">
+            <h3>Formação Geral Básica</h3>
             <ul>
-                <li><strong>Quarta 19/03:</strong> Prova de Sociologia</li>
-                <li><strong>Quinta 20/03:</strong> Atividade prática de Artes</li>
+                <li><strong>Quarta 02/04:</strong> Seminário de Filosofia</li>
+                <li><strong>Segunda 07/04:</strong> Seminário de Sociologia</li>
+            </ul>
+        </div>
+        <div class="trblpendente">
+            <h3>Intinerário Exatas</h3>
+            <ul>
+                <li><strong>Segunda 07/03:</strong> Prova de Cidade em Movimento</li>
+            </ul>
+        </div>
+        <div class="trblpendente">
+            <h3>Intinerário Humanas</h3>
+            <ul>
+                <li><strong>Segunda 07/03:</strong> ?</li>
+                <li><strong>Quinta 20/03:</strong> ?</li>
             </ul>
         </div>
     </div>
@@ -238,20 +255,19 @@
         <button class="close-btn" onclick="closeSection('provas')">X</button>
         <h2>Assuntos das Provas</h2>
         <div class="assprova">
-            <h3>Geografia</h3>
-            <p><strong>Prova Padrão:</strong></p>
+            <h3>Física</h3>
+            <p><strong>Prova padrão e adaptada:</strong></p>
             <ul>
-                <li>Livro 9, capítulo 20, Separatismo na Europa e na América, páginas 306-313</li>
-                <li>Livro 9, capítulo 21, Separatismos, páginas 327-333</li>
+                <li>Livro 10, capítulo 14, Dinâmica Impulsiva, páginas 43-53</li>
             </ul>
         </div>
         <hr>
         <div class="assprova">
-            <h3>História</h3>
-            <p><strong>Prova Padrão:</strong></p>
+            <h3>Português</h3>
+            <p><strong>Prova padrão e adaptada:</strong></p>
             <ul>
-                <li>Livro 9, capítulo 20, Iluminismo e seus grandes nomes, páginas 98-106</li>
-                <li>Livro 9, capítulo 21, Ideais medievais, páginas 114-126</li>
+                <li>Livro 9, capítulo 21, Naturalismo, páginas 166-177</li>
+                <li>Livro 10, capítulo 12, Advérbio, preposição e conjunção, páginas 136-141</li>
             </ul>
         </div>
     </div>
@@ -259,32 +275,74 @@
         <button class="close-btn" onclick="closeSection('atualidades')">X</button>
         <h2>Texto de Atualidades</h2>
         <div class="attlidades">
-            <h3>Projeto GEOAFRO aplica Geodireito para cartografar a cultura afro-brasileira</h3>
-            <p>O Projeto GEOAFRO lançou, neste mês, uma série de mapas que ilustram a trajetória dos 
-                movimentos sociais e políticos afro-brasileiros desde 1971 até 2024, integrando a aplicação do 
-                geodireito para representar a presença e a organização dessa cultura no território nacional. 
-                Intitulada “Cartografia do Movimento Social & Geopolítico Afrobrasileiro”, a coleção apresenta uma 
-                análise detalhada da mobilização do movimento negro no Brasil e acompanha o desenvolvimento 
-                do Dia Nacional da Consciência Negra.
-                <span style="background-color: yellow !important; color: black;">Composta por seis mapas temáticos, a cartografia recorre à linguagem visual, estatísticas e 
-                conceitos de Geodireito para delinear as territorialidades afro-brasileiras ao longo das décadas. </span>
-                Essa documentação acompanha eventos e fatos que marcaram a constituição e a evolução do 
-                Movimento Negro Unificado, destacando as adesões municipais e estaduais ao feriado de Zumbi 
-                dos Palmares e da Consciência Negra. Sob a coordenação do geógrafo Rafael Sanzio dos Anjos, 
-                a iniciativa faz parte do Sistema de Informações Espaciais do Brasil Africano (SIEAFRO) e conta 
-                com o suporte do Instituto Káwò, além de financiamento do CNPQ.
-                Os mapas avançam na disponibilização pública de cartografias étnico-raciais em plataformas 
-                digitais brasileiras ao oferecer uma perspectiva histórica da atuação e dos movimentos afrobrasileiros
-                em várias regiões. Esse levantamento revela a concentração de eventos e iniciativas de 
-                matriz africana em diversas cidades e regiões do país e ilustra a trajetória de um movimento que 
-                começou formalmente com o Movimento Negro Unificado, nos anos 1970. Ela está presente até os 
-                dias atuais, com conquistas legislativas como a Lei n. 14.759/23, que estabelece o Dia da 
-                Consciência Negra como feriado nacional.
-                A cartografia do GEOAFRO também contribui para o contexto educacional ao se tornar uma 
-                ferramenta de apoio para o ensino da história afro-brasileira em escolas e universidades. 
-                Educadores, pesquisadores, estudantes e o público em geral podem acessar os mapas temáticos 
-                no Portal do Projeto GEOAFRO, obtendo novas perspectivas sobre a presença e a organização da 
-                cultura afro-brasileira no Brasil e suas influências em políticas públicas.</p>            
+            <h3>Katherine Johnson: o legado da matemática que levouo homem à lua</h3>
+            <img src="Atualidades/att1.jpg" class="atualimagem">
+            <p>Anos atrás, uma pesquisa vasculhou o conhecimento da população sobre como os cientistas
+                pareciam. Não surpreendente, o resultado demonstrou que a famosa foto de Einstein, um homem
+                branco e de cabelos desgrenhados, povoava a imagem cerebral das pessoas sobre quem faz
+                ciência. <strong>Mas Katherine Johnson, está completamente fora desse padrão.</strong><br>
+                <br>A mulher sobre a qual falaremos hoje é uma pessoa de feitos extraordinários, que além de levar
+                os primeiros homens para órbita terrestre e a alcançar a Lua, também fez contribuições para o
+                ingresso de outras mulheres no mundo das ciências exatas.<br>
+                <br>Saiba um pouco mais Katherine Johnson, uma das grandes mulheres da ciência que inspirou o
+                livro e <strong>filme “Estrelas além do tempo” e que contribuiu com sua matemática e espírito pioneiro.</strong><br>
+                <br><strong> os céus com Katherine Johnson</strong><br><br>
+                Contar pode ser uma paixão, ao menos era esse o passatempo da pequena Katherine Johnson,
+                filha de Joylette Roberta Coleman e Joshua McKinleyColeman, nascida em 26 de agosto de 1918,
+                na cidade de White Sulphur Springs, Virgínia Ocidental, EUA.<br><br>
+                Os anos entre 1877 até 1960 foram marcados por leis segregacionistas, conhecidas como “Leis
+                Jim Crow” que restringiam o acesso de pessoas negras à educação, saúde, trabalho, dentre
+                outros impasses para participação social dessa população.<br><br>
+                Não diferente com Katherine e sua família, para que a menina pudesse terminar, o que para nós
+                é equivalente ao ensino médio, precisaram mudar-se de cidade. Mas a menina que contava, não
+                terminou o ensino regular aos 17 anos, como se espera, mas sim aos 14 anos!<br><br>
+                <img src="Atualidades/att2.jpg" class="atualimagem"><br>
+                Logo após a conclusão, ela ingressou na West Virginia State College, onde obteve, com honras,
+                os diplomas em Francês e Matemática em 1932, aos 18 anos. Durante sua graduação, foi
+                mentorada por outra grande figura da comunidade afro-americana, W. W. Schieffelin Claytor, a
+                terceira pessoa negra a conseguir um diploma de doutorado.<br><br>
+                Segundo conta a história, <strong>Claytor quem incentivou que Johnson seguisse na carreira
+                acadêmica e lhe deu aulas de geometria.</strong> O que logo a frente, será um diferencial e tanto para
+                sua carreira.<br><br>
+                Após a formatura, Katherine lecionou por alguns anos em algumas instituições, até que em 1939,
+                ela foi uma dos três alunos negros selecionados para participar do programa de pós-graduação
+                da West Virginia University.<br><br>
+                Contudo, ela não concluiu a formação, optando naquele momento pelo afastamento para poder
+                se casar com seu primeiro marido James Globe, com quem teve três filhas. Ele faleceu em 1956,
+                em decorrência de um câncer.<br><br>
+                Em 1952, as coisas começam a tomar um rumo interessante, começando pela notícia de que a
+                agência antecessora a NASA, a NACA (National Advisory Committee for Aeronautics), <strong>estava
+                procurando por mulheres negras que fossem boas em matemática.</strong><br><br>
+                <img src="Atualidades/att3.jpg" class="atualimagem"><br><br>
+                Seu ingresso na NACA ocorreu em 1953, onde ficou alocada por pouco tempo no setor das
+                mulheres que conferiam cálculos. Graças ao seu espírito observador e inquisidor, ela foi
+                transferida para outro setor, verificando inicialmente as causas de um acidente aéreo e
+                posteriormente, mandando homens para o espaço!<br><br>
+                <strong>Calculando o rumo para a Lua</strong><br><br>
+                Em 1958 a NACA passa a ser NASA (National Aeronautics and Space Administration). Esse
+                movimento de mudança foi estimulado pela corrida espacial, iniciada em 1955. A extinta União
+                Soviética saiu na frente em 1957 com o lançamento do Satélite Sputnik, então mudanças eram
+                necessárias.<br><br>
+                E quem melhor do que Katherine Johnson com sua matemática e geometria para contribuir para
+                o desenvolvimento do futuro? Ela não apenas calculava trajetórias, suas parábolas e janelas de
+                lançamento, mas também conferia os cálculos de uma máquina estranha nos seus primórdios, os
+                grandes computadores IBM 4090.<br><br>
+                Ela esteve envolvida nos cálculos da Missão Freedom 7, ou Mercury Redstone 3, o primeiro voo
+                tripulado dos Estados Unidos, onde Alan Shepard foi levado ao espaço, e retornou com
+                segurança, <strong>em uma viagem que durou pouco menos de 16 minutos, no ano de 1961. Foi a
+                primeira vez que o homem alcançou o espaço.</strong><br><br>
+                Mas todo esse caminho de sucesso foi marcado por muita luta. Como uma mulher negra, Johnson
+                precisou ser decidida e forte para que sua voz pudesse ser ouvida e suas ideias acolhidas. <strong>Ela foi
+                a primeira mulher a receber crédito por suas contribuições em relatórios e artigos técnicos.</strong><br><br>
+                Sua aposentadoria veio após 33 anos de contribuição com os esforços espaciais, em
+                1986. <strong>Contudo, o reconhecimento por seu esforço só foi concedido em 2015</strong>, quando
+                recebeu a Medalha Presidencial da Liberdade, conferida pelo então presidente, Barack Obama.<br><br>
+                Em 2016, ela foi novamente homenageada, ganhando um prédio com seu nome nas instalações
+                da NASA em Langley, onde trabalhou em sua jornada pelos números. Sua incrível vida chegou
+                ao fim em 2020, depois de uma longeva aventura de 101 anos pela matemática e geometria que
+                tanto amava e que possibilitou que ela alçasse o mundo aos céus.<br><br>
+                <strong>Katherine Johnson deixa um legado para a ciência e para todas as meninas que sonham
+                um dia ingressar no mundo acadêmico e seguirem carreiras científicas.</strong></p>        
         </div>
     </div>
     <div id="alunos" class="info-section">
