--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
             pointer-events: none;
         }
         .atualimagem {
+            width: 100%;
             border-radius: 10px;
         }
     </style>
