Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -247,8 +247,7 @@
         <div class="trblpendente">
             <h3>Intinerário Humanas</h3>
             <ul>
-                <li><strong>Segunda 07/03:</strong> ?</li>
-                <li><strong>Quinta 20/03:</strong> ?</li>
+                <li><strong>Quarta 16/03:</strong> Apresentação de vídeo sobre minorias.</li>
             </ul>
         </div>
     </div>
