Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
         #newsFilter {
             color: #0f2c47;
             background-color: #c2bcae;
+            padding: 10px;
         }
         .aluno {
             display: flex;
