Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -255,19 +255,26 @@
         <button class="close-btn" onclick="closeSection('provas')">X</button>
         <h2>Assuntos das Provas</h2>
         <div class="assprova">
-            <h3>Física</h3>
-            <p><strong>Prova padrão e adaptada:</strong></p>
+            <h3>Biologia</h3>
+            <p><strong>Prova padrão:</strong></p>
             <ul>
-                <li>Livro 10, capítulo 14, Dinâmica Impulsiva, páginas 43-53</li>
+                <li>Livro 10, capítulo 12, Sucessão ecológica, páginas 82-85</li>
+                <li>Livro 10, capítulo 12, Ecologia das populações, páginas 85-88</li>
+                <li>Livro 10, capítulo 12, Relações ecológicas, páginas 88-103</li>
+            </ul>
+            <p><strong>Prova adaptada:</strong></p>
+            <ul>
+                <li>Livro 10, capítulo 12, Sucessão ecológica, páginas 82-85</li>
+                <li>Livro 10, capítulo 12, Relações ecológicas, páginas 88-103</li>
             </ul>
         </div>
         <hr>
         <div class="assprova">
-            <h3>Português</h3>
+            <h3>Química</h3>
             <p><strong>Prova padrão e adaptada:</strong></p>
             <ul>
-                <li>Livro 9, capítulo 21, Naturalismo, páginas 166-177</li>
-                <li>Livro 10, capítulo 12, Advérbio, preposição e conjunção, páginas 136-141</li>
+                <li>Livro 9 (azul), capítulo 15, Bioquímica, páginas 59-68</li>
+                <li>Livro , capítulo 16, Gases (parte 1), 79-87</li>
             </ul>
         </div>
     </div>
