Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
             <p><strong>Prova padrão e adaptada:</strong></p>
             <ul>
                 <li>Livro 9 (azul), capítulo 15, Bioquímica, páginas 59-68</li>
-                <li>Livro , capítulo 16, Gases (parte 1), 79-87</li>
+                <li>Livro 9 (azul), capítulo 16, Gases (parte 1), 79-87</li>
             </ul>
         </div>
     </div>
