Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -356,24 +356,10 @@
         <button class="close-btn" onclick="closeSection('alunos')">X</button>
         <h2>Alunos</h2>
         <div class="aluno">
-            <img src="pre-sets/person.png" alt="Eri Costa">
+            <img src="pre-sets/person.png" alt="Em contrição">
             <div>
-                <h3>Eri Costa</h3>
-                <p>Com fé logo breve será nosso renomadíssimo líder!! Gigachaad</p>
-            </div>
-        </div>
-        <div class="aluno" style="flex-direction: row-reverse;">
-            <img src="pre-sets/person.png" alt="Enzo Valverde">
-            <div>
-                <h3>Enzo Valverde</h3>
-                <p>Programou esse site aqui ó, tá ficando dahora!</p>
-            </div>
-        </div>
-        <div class="aluno">
-            <img src="pre-sets/person.png" alt="Giulia Sampaio">
-            <div>
-                <h3>Giulia Sampaio</h3>
-                <p>Em breve nossa queridíssima vice-líder!</p>
+                <h3>Em contrução!</h3>
+                <p>Esta seção irá trazer algumas informações sobre os alunos do segundão. (isto é a ideia e pode acabar sendo alterada)</p>
             </div>
         </div>
     </div>
