Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
             <img src="pre-sets/person.png" alt="Em contrição">
             <div>
                 <h3>Em contrução!</h3>
-                <p>Esta seção irá trazer algumas informações sobre os alunos do segundão. (isto é a ideia e pode acabar sendo alterada)</p>
+                <p>Esta seção irá trazer algumas informações sobre os alunos do segundão. (isto é a ideia, porém pode acabar sendo alterada)</p>
             </div>
         </div>
     </div>
