--- a/index.html
+++ b/index.html
@@ -234,14 +234,14 @@
         <div class="trblpendente">
             <h3>Formação Geral Básica</h3>
             <ul>
-                <li><strong>Quarta 02/04:</strong> Seminário de Filosofia</li>
-                <li><strong>Segunda 07/04:</strong> Seminário de Sociologia</li>
+                <li><strong>Quarta 09/04:</strong> Seminário de Dom Casmurro</li>
+                <li><strong>Quarta 09/04:</strong> Seminário de Sociologia</li>
             </ul>
         </div>
         <div class="trblpendente">
             <h3>Intinerário Exatas</h3>
             <ul>
-                <li><strong>Segunda 07/03:</strong> Prova de Cidade em Movimento</li>
+                <li><strong>Segunda 14/04:</strong> Entrega dos cálculos de Cidade em movimento.</li>
             </ul>
         </div>
         <div class="trblpendente">
@@ -255,7 +255,7 @@
         <button class="close-btn" onclick="closeSection('provas')">X</button>
         <h2>Assuntos das Provas</h2>
         <div class="assprova">
-            <h3>Biologia</h3>
+            <h3>Biologia (09/04)</h3>
             <p><strong>Prova padrão:</strong></p>
             <ul>
                 <li>Livro 10, capítulo 12, Sucessão ecológica, páginas 82-85</li>
@@ -270,11 +270,31 @@
         </div>
         <hr>
         <div class="assprova">
-            <h3>Química</h3>
+            <h3>Química (09/04)</h3>
             <p><strong>Prova padrão e adaptada:</strong></p>
             <ul>
                 <li>Livro 9 (azul), capítulo 15, Bioquímica, páginas 59-68</li>
-                <li>Livro 9 (azul), capítulo 16, Gases (parte 1), 79-87</li>
+                <li>Livro 9 (azul), capítulo 16, Gases (parte 1), páginas 79-87</li>
+            </ul>
+        </div>
+        <div class="assprova">
+            <h3>História (12/04)</h3>
+            <p><strong>Prova padrão e adaptada:</strong></p>
+            <ul>
+                <li>Em breve.</li>
+            </ul>
+        </div>
+        <div class="assprova">
+            <h3>Geografia (12/04)</h3>
+            <p><strong>Prova padrão e adaptada:</strong></p>
+            <ul>
+                <li>Livro 10, capítulo 22, Problemas antrópicos, páginas 319-322</li>
+                <li>Livro 10, capítulo 23, Agricultura, páginas 331-340</li>
+            </ul>
+            <p><strong>Prova adaptada:</strong></p>
+            <ul>
+                <li>Livro 10, capítulo 22, Problemas antrópicos, páginas 319-322</li>
+                <li>Livro 10, capítulo 23, Agricultura, páginas (333 e 334, 337=340)</li>
             </ul>
         </div>
     </div>
