--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
             <h3>História (12/04)</h3>
             <p><strong>Prova padrão e adaptada:</strong></p>
             <ul>
-                <li>Em breve.</li>
+                <li>Em breve</li>
             </ul>
         </div>
         <div class="assprova">
@@ -294,7 +294,7 @@
             <p><strong>Prova adaptada:</strong></p>
             <ul>
                 <li>Livro 10, capítulo 22, Problemas antrópicos, páginas 319-322</li>
-                <li>Livro 10, capítulo 23, Agricultura, páginas (333 e 334, 337=340)</li>
+                <li>Livro 10, capítulo 23, Agricultura, páginas (333 e 334, 337-340)</li>
             </ul>
         </div>
     </div>
