--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
         </div>
         <div class="noticia" data-date="2025-03-18">
             <h3>Piquenique Temático na Aula de Química</h3>
-            <p>Nós alunos, fizemos um piquenique temático do atual assunto de química! Instruido pela professora (esqueci o nome dela).</p>
+            <p>Nós alunos, fizemos um piquenique temático do atual assunto de química! Instruido pela professora Lis Beltrão.</p>
             <p><strong>Data:</strong> 18/03</p>
             <img src="Notícias/pqnq.png" alt="Piquenique Temático">
         </div>
