--- a/index.html
+++ b/index.html
@@ -234,8 +234,10 @@
         <div class="trblpendente">
             <h3>Formação Geral Básica</h3>
             <ul>
-                <li><strong>Quarta 09/04:</strong> Seminário de Dom Casmurro</li>
-                <li><strong>Quarta 09/04:</strong> Seminário de Sociologia</li>
+                <li><strong>Quarta 16/04:</strong> Seminário de Dom Casmurro</li>
+                <li><strong>Segunda 14/04:</strong> Seminário de Sociologia</li>
+                <li><strong>Sexta 11/04:</strong> Seminário de Oficina de Produção Textual</li>
+                <li><strong>Sexta 16/04:</strong> Seminário de Oficina de Produção Textual</li>
             </ul>
         </div>
         <div class="trblpendente">
@@ -255,34 +257,18 @@
         <button class="close-btn" onclick="closeSection('provas')">X</button>
         <h2>Assuntos das Provas</h2>
         <div class="assprova">
-            <h3>Biologia (09/04)</h3>
-            <p><strong>Prova padrão:</strong></p>
-            <ul>
-                <li>Livro 10, capítulo 12, Sucessão ecológica, páginas 82-85</li>
-                <li>Livro 10, capítulo 12, Ecologia das populações, páginas 85-88</li>
-                <li>Livro 10, capítulo 12, Relações ecológicas, páginas 88-103</li>
-            </ul>
-            <p><strong>Prova adaptada:</strong></p>
-            <ul>
-                <li>Livro 10, capítulo 12, Sucessão ecológica, páginas 82-85</li>
-                <li>Livro 10, capítulo 12, Relações ecológicas, páginas 88-103</li>
-            </ul>
-        </div>
-        <hr>
-        <div class="assprova">
-            <h3>Química (09/04)</h3>
-            <p><strong>Prova padrão e adaptada:</strong></p>
-            <ul>
-                <li>Livro 9 (azul), capítulo 15, Bioquímica, páginas 59-68</li>
-                <li>Livro 9 (azul), capítulo 16, Gases (parte 1), páginas 79-87</li>
-            </ul>
-        </div>
-        <hr>
-        <div class="assprova">
             <h3>História (12/04)</h3>
             <p><strong>Prova padrão e adaptada:</strong></p>
             <ul>
-                <li>Em breve</li>
+                <li>Livro 10, capítulo 9, A Revolução Americana, páginas 286-289</li>
+                <li>Livro 10, capítulo 10, A Revolução Industrial, páginas 288-296</li>
+                <li>Livro 10, capítulo 10, A Revolução Francesa, páginas 296-303</li>
+                <li>Livro 10, capítulo 10, Era Napoleônica, páginas 303-308</li>
+            </ul>
+            <p><strong>Prova adaptada:</strong></p>
+            <ul>
+                <li>Livro 10, capítulo 10, A Revolução Francesa, páginas 296-303</li>
+                <li>Livro 10, capítulo 10, Era Napoleônica, páginas 303-308</li>
             </ul>
         </div>
         <hr>
@@ -304,74 +290,9 @@
         <button class="close-btn" onclick="closeSection('atualidades')">X</button>
         <h2>Texto de Atualidades</h2>
         <div class="attlidades">
-            <h3>Katherine Johnson: o legado da matemática que levouo homem à lua</h3>
+            <h3>Ainda não temos acesso ao proximo texto.</h3>
             <img src="Atualidades/att1.jpg" class="atualimagem">
-            <p>Anos atrás, uma pesquisa vasculhou o conhecimento da população sobre como os cientistas
-                pareciam. Não surpreendente, o resultado demonstrou que a famosa foto de Einstein, um homem
-                branco e de cabelos desgrenhados, povoava a imagem cerebral das pessoas sobre quem faz
-                ciência. <strong>Mas Katherine Johnson, está completamente fora desse padrão.</strong><br>
-                <br>A mulher sobre a qual falaremos hoje é uma pessoa de feitos extraordinários, que além de levar
-                os primeiros homens para órbita terrestre e a alcançar a Lua, também fez contribuições para o
-                ingresso de outras mulheres no mundo das ciências exatas.<br>
-                <br>Saiba um pouco mais Katherine Johnson, uma das grandes mulheres da ciência que inspirou o
-                livro e <strong>filme “Estrelas além do tempo” e que contribuiu com sua matemática e espírito pioneiro.</strong><br>
-                <br><strong> os céus com Katherine Johnson</strong><br><br>
-                Contar pode ser uma paixão, ao menos era esse o passatempo da pequena Katherine Johnson,
-                filha de Joylette Roberta Coleman e Joshua McKinleyColeman, nascida em 26 de agosto de 1918,
-                na cidade de White Sulphur Springs, Virgínia Ocidental, EUA.<br><br>
-                Os anos entre 1877 até 1960 foram marcados por leis segregacionistas, conhecidas como “Leis
-                Jim Crow” que restringiam o acesso de pessoas negras à educação, saúde, trabalho, dentre
-                outros impasses para participação social dessa população.<br><br>
-                Não diferente com Katherine e sua família, para que a menina pudesse terminar, o que para nós
-                é equivalente ao ensino médio, precisaram mudar-se de cidade. Mas a menina que contava, não
-                terminou o ensino regular aos 17 anos, como se espera, mas sim aos 14 anos!<br><br>
-                <img src="Atualidades/att2.jpg" class="atualimagem"><br>
-                Logo após a conclusão, ela ingressou na West Virginia State College, onde obteve, com honras,
-                os diplomas em Francês e Matemática em 1932, aos 18 anos. Durante sua graduação, foi
-                mentorada por outra grande figura da comunidade afro-americana, W. W. Schieffelin Claytor, a
-                terceira pessoa negra a conseguir um diploma de doutorado.<br><br>
-                Segundo conta a história, <strong>Claytor quem incentivou que Johnson seguisse na carreira
-                acadêmica e lhe deu aulas de geometria.</strong> O que logo a frente, será um diferencial e tanto para
-                sua carreira.<br><br>
-                Após a formatura, Katherine lecionou por alguns anos em algumas instituições, até que em 1939,
-                ela foi uma dos três alunos negros selecionados para participar do programa de pós-graduação
-                da West Virginia University.<br><br>
-                Contudo, ela não concluiu a formação, optando naquele momento pelo afastamento para poder
-                se casar com seu primeiro marido James Globe, com quem teve três filhas. Ele faleceu em 1956,
-                em decorrência de um câncer.<br><br>
-                Em 1952, as coisas começam a tomar um rumo interessante, começando pela notícia de que a
-                agência antecessora a NASA, a NACA (National Advisory Committee for Aeronautics), <strong>estava
-                procurando por mulheres negras que fossem boas em matemática.</strong><br><br>
-                <img src="Atualidades/att3.jpg" class="atualimagem"><br><br>
-                Seu ingresso na NACA ocorreu em 1953, onde ficou alocada por pouco tempo no setor das
-                mulheres que conferiam cálculos. Graças ao seu espírito observador e inquisidor, ela foi
-                transferida para outro setor, verificando inicialmente as causas de um acidente aéreo e
-                posteriormente, mandando homens para o espaço!<br><br>
-                <strong>Calculando o rumo para a Lua</strong><br><br>
-                Em 1958 a NACA passa a ser NASA (National Aeronautics and Space Administration). Esse
-                movimento de mudança foi estimulado pela corrida espacial, iniciada em 1955. A extinta União
-                Soviética saiu na frente em 1957 com o lançamento do Satélite Sputnik, então mudanças eram
-                necessárias.<br><br>
-                E quem melhor do que Katherine Johnson com sua matemática e geometria para contribuir para
-                o desenvolvimento do futuro? Ela não apenas calculava trajetórias, suas parábolas e janelas de
-                lançamento, mas também conferia os cálculos de uma máquina estranha nos seus primórdios, os
-                grandes computadores IBM 4090.<br><br>
-                Ela esteve envolvida nos cálculos da Missão Freedom 7, ou Mercury Redstone 3, o primeiro voo
-                tripulado dos Estados Unidos, onde Alan Shepard foi levado ao espaço, e retornou com
-                segurança, <strong>em uma viagem que durou pouco menos de 16 minutos, no ano de 1961. Foi a
-                primeira vez que o homem alcançou o espaço.</strong><br><br>
-                Mas todo esse caminho de sucesso foi marcado por muita luta. Como uma mulher negra, Johnson
-                precisou ser decidida e forte para que sua voz pudesse ser ouvida e suas ideias acolhidas. <strong>Ela foi
-                a primeira mulher a receber crédito por suas contribuições em relatórios e artigos técnicos.</strong><br><br>
-                Sua aposentadoria veio após 33 anos de contribuição com os esforços espaciais, em
-                1986. <strong>Contudo, o reconhecimento por seu esforço só foi concedido em 2015</strong>, quando
-                recebeu a Medalha Presidencial da Liberdade, conferida pelo então presidente, Barack Obama.<br><br>
-                Em 2016, ela foi novamente homenageada, ganhando um prédio com seu nome nas instalações
-                da NASA em Langley, onde trabalhou em sua jornada pelos números. Sua incrível vida chegou
-                ao fim em 2020, depois de uma longeva aventura de 101 anos pela matemática e geometria que
-                tanto amava e que possibilitou que ela alçasse o mundo aos céus.<br><br>
-                <strong>Katherine Johnson deixa um legado para a ciência e para todas as meninas que sonham
-                um dia ingressar no mundo acadêmico e seguirem carreiras científicas.</strong></p>        
+            <p>!</strong></p>        
         </div>
     </div>
     <div id="alunos" class="info-section">
