--- a/index.html
+++ b/index.html
@@ -312,6 +312,11 @@
         <input type="date" id="newsFilter" onchange="filterNews()">
         <hr>
         <div class="noticia" data-date="2025-03-17">
+            <h3>Vencemos as eleições!!!</h3>
+            <p>Logo após o intervalo do ensino médio, ocorreu o anúncio de quem venceu as eleições de sala, e no nosso segundão os vencedores foram Eri e Giulia! Que essa vitória nos abra muitas portas no futuro.</p>
+            <p><strong>Data:</strong> 17/03</p>
+        </div>
+        <div class="noticia" data-date="2025-03-17">
             <h3>Início das votações de lider e vice-lider da sala.</h3>
             <p>Durante as aulas de Ed.Física e históra, a instrutora Rita nos apresentou ao "sistema de liderança" da sala. <a href="#" onclick="toggleSection('alunos')">Eri Costa</a> e <a href="#" onclick="toggleSection('alunos')">Giulia Sampaio</a> se elegeram!!</p>
             <p><strong>Data:</strong> 17/03</p>
